<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragment.HomeFragment">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="@dimen/size_150dp"
        android:layout_height="@dimen/size_130dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_70dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImage">

        <ImageView
            android:id="@+id/tariffs"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/tariffs" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/tariffs"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_70dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImage">

        <ImageView
            android:id="@+id/minutes"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/minutes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/minutes"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_70dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container1">

        <ImageView
            android:id="@+id/internet"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/internet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/internet"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_70dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container2">

        <ImageView
            android:id="@+id/services"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/services" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/services"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_70dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container3">

        <ImageView
            android:id="@+id/sms"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/sms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/sms"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_70dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container4">

        <ImageView
            android:id="@+id/news"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/news" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/news"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>