<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="Fragment.NewsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_150dp"
        android:layout_marginHorizontal="@dimen/size_20dp"
        android:layout_marginVertical="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_10dp"
        app:cardCornerRadius="@dimen/size_12dp"
        app:cardElevation="@dimen/size_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/size_10dp"
                android:gravity="center"
                android:text="@string/corporate"
                android:textColor="@color/red"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/red"
                android:layout_marginHorizontal="@dimen/size_70dp"
                android:layout_marginTop="@dimen/size_20dp"/>

            <TextView
                android:id="@+id/txtBatafsil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/size_10dp"
                android:gravity="center"
                android:text="@string/ba_tafsil"
                android:textColor="@color/red"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/size_10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_150dp"
        android:layout_marginHorizontal="@dimen/size_20dp"
        android:layout_marginVertical="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_10dp"
        app:cardCornerRadius="@dimen/size_12dp"
        app:cardElevation="@dimen/size_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/size_10dp"
                android:gravity="center"
                android:text="@string/Kunlik_internet"
                android:textColor="@color/red"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/red"
                android:layout_marginHorizontal="@dimen/size_70dp"
                android:layout_marginTop="@dimen/size_20dp"/>

            <TextView
                android:id="@+id/txtBatafsil2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/size_10dp"
                android:gravity="center"
                android:text="@string/ba_tafsil"
                android:textColor="@color/red"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/size_10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_150dp"
        android:layout_marginHorizontal="@dimen/size_20dp"
        android:layout_marginVertical="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_10dp"
        app:cardCornerRadius="@dimen/size_12dp"
        app:cardElevation="@dimen/size_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/size_10dp"
                android:gravity="center"
                android:text="@string/tungi_drive"
                android:textColor="@color/red"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/red"
                android:layout_marginHorizontal="@dimen/size_70dp"
                android:layout_marginTop="@dimen/size_20dp"/>

            <TextView
                android:id="@+id/txtBatafsil3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/size_10dp"
                android:gravity="center"
                android:text="@string/ba_tafsil"
                android:textColor="@color/red"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/size_10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>